src/objects/Legacy_Folder__c.object
<CustomObject>
    <description>Serves as a link for documents to link from Legacy Folders to New Folders</description>
    <fields>
        <fullName>AccessType__c</fullName>
        <label>AccessType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <label>DeveloperName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsReadonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReadonly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By_ID__c</fullName>
        <label>Legacy Created By ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NamespacePrefix__c</fullName>
        <label>NamespacePrefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Email Template</fullName>
                </value>
                <value>
                    <fullName>Macro</fullName>
                </value>
                <value>
                    <fullName>QuickText</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Legacy Folder</label>
    <nameField>
        <label>Legacy Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legacy Folder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>